fixes alignment

--- a/src/scss/components/_card-grid.scss
+++ b/src/scss/components/_card-grid.scss
@@ -5,18 +5,21 @@
 
   &__wrapper {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
     gap: rem($gap);
+
+    @media #{$screen-tablet} {
+      justify-content: center;
+    }
   }
 
   &__item {
     display: flex;
-    justify-content: center;
     flex-basis: calc(percentage(1 / 3) - rem($gap));
 
     @media #{$screen-tablet} {
       flex-basis: calc(percentage(1 / 2) - rem($gap));
+      justify-content: center;
     }
 
     @media #{$screen-mobile} {
